[tool.poetry]
name = "generator-server"
version = "0.1.0"
description = ""
authors = ["Sergey Morozov <sergey@morozov.top>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
diffusers = "0.2.3"
transformers = "^4.21.1"
scipy = "^1.9.0"
fastapi = "^0.79.1"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
uvloop = "^0.16.0"
torch = { version="^1.12.1", source="torch" }
# version = "1.12.1+cu116"
pydantic = "^1.9.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
snakeviz = "^2.1.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
