[tool.poetry]
name = "image-ai-utils-server"
version = "0.0.2"
description = ""
authors = ["Sergey Morozov <sergey@morozov.top>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10" # 3.9 required for gfpgan which requires older version of numpy
diffusers = "0.2.3"
transformers = "^4.21.1"
scipy = "^1.9.0"
fastapi = "^0.79.1"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
torch = { version="^1.12.1", source="torch" }
pydantic = "^1.9.2"
Pillow = "^9.2.0"
gfpgan = "^1.3.4"
realesrgan = "^0.2.5.0"
numpy = "1.20.3"
python-dotenv = "^0.20.0"
colorlog = "^6.7.0"

[tool.poetry.dev-dependencies]
snakeviz = "^2.1.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
